--- a/l2scrollprogress/print.css
+++ b/l2scrollprogress/print.css
@@ -12,6 +12,14 @@ body{
 
 .header{
     position: static;
+
+    -webkit-print-color-adjust: exact;
+}
+
+.content{
+    -webkit-print-color-adjust: exact;
+    padding: 0 50px;
+    margin: 0 auto;
 }
 
 @page{
