--- a/l2scrollprogress/style.css
+++ b/l2scrollprogress/style.css
@@ -9,7 +9,7 @@ body{
 
 .header{
     width: 100%;
-    background-color: #f1f1f1;
+    background-color: steelblue;
     text-align: center;
 
     position: fixed;
@@ -31,6 +31,8 @@ body{
 
 .content{
     width: 80%;
+    /* background-color: skyblue; */
+    background: linear-gradient(skyblue,#f1f1f1);
     padding: 50px 0;
     margin: 100px auto;
 }
